Cant get the cdn libary working, so copy pasted
I can't bloody get this library to import properly. Seems like I'll need to download Node js and uimport with npm, which I'd prefer not yet.

So i looked at source code and wuill just copy the damn things

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         <!-- this library: https://www.npmjs.com/package/image-conversion -->
 
          <!-- library web-based -->
-        <!-- <script src="https://cdn.jsdelivr.net/gh/WangYuLue/image-conversion/build/conversion.js"></script> -->
-        <script src="https://unpkg.com/image-conversion/dist/image-conversion.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/WangYuLue/image-conversion/build/conversion.js"></script>
 
         <!-- <script src="index.js"></script> -->
+
+        <!-- https://www.npmjs.com/package/jimp?activeTab=readme  -->
 
         <!-- https://stackoverflow.com/questions/10617710/how-to-convert-jpg-image-to-png-using-javascript -->
 
@@ -49,7 +50,8 @@
        </main>
 
 
-    <script src="index.js"></script>
+    <script async src="index.js"></script>
+    <!-- <script type="module" src="index.js"></script> -->
     </body>
 
 
