--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
         <!-- "looking" at this website for inspiration: https://www.adobe.com/express/feature/image/convert/jpg-to-png -->
         <!-- this library: https://www.npmjs.com/package/image-conversion -->
 
-         <!-- library web-based -->
-        <!-- <script src="https://cdn.jsdelivr.net/gh/WangYuLue/image-conversion/build/conversion.js"></script> -->
-        <script src="https://cdn.jsdelivr.net/npm/image-conversion@2.2.2/dist/image-conversion.min.js"></script>
-
-        <!-- <script src="index.js"></script> -->
+        <!-- library web-based -->
+        <!-- <script src="https://cdn.jsdelivr.net/npm/image-conversion@2.2.2/dist/image-conversion.min.js"></script> -->
+        <script src="https://cdn.jsdelivr.net/gh/WangYuLue/image-conversion/build/conversion.js"></script>
 
         <!-- https://www.npmjs.com/package/jimp?activeTab=readme  -->
 
@@ -75,7 +73,9 @@
 
 
     <!-- <script async src="index.js"></script> -->
-    <script src="index.js"></script>
+    <script src="node_modules/image-conversion/build/conversion.js"></script>
+    <!-- <script type="module" src="index.js"></script> -->
+     <script src="index.js"></script>
     </body>
 
 
