Polished convert button
I just polished the convert button.

I got the svg drop-shadow working. Removed the unnecessary code that deepseek previously generated, and replaced with fewer lines. Also added a fancy rotate to when hovered.

JavaScript: I added a new reference to the text inside the svg button. Also added a text change with a timeout, for when the convert buytton has been clicked.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
         <!-- this library: https://www.npmjs.com/package/image-conversion -->
 
         <!-- library web-based -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/image-conversion@2.2.2/dist/image-conversion.min.js"></script> -->
         <script src="https://cdn.jsdelivr.net/gh/WangYuLue/image-conversion/build/conversion.js"></script>
-
-        <!-- https://www.npmjs.com/package/jimp?activeTab=readme  -->
 
         <!-- https://stackoverflow.com/questions/10617710/how-to-convert-jpg-image-to-png-using-javascript -->
 
@@ -38,23 +35,10 @@
 
                 </div>
 
-                <button class="convertBTN">Convert:
-                    <svg width="200" height="100" viewBox="0 0 200 100" class="arrow-svg">
-                        <defs>
-                            <!-- Arrow shadow filter -->
-                            <filter id="arrowShadow" x="-20%" y="-20%" width="140%" height="140%">
-                                <feGaussianBlur in="SourceAlpha" stdDeviation="3" result="blur"/>
-                                <feOffset dx="2" dy="2" result="offsetBlur"/>
-                                <feFlood flood-color="rgba(0,0,0,0.5)" result="shadowColor"/>
-                                <feComposite in="shadowColor" in2="offsetBlur" operator="in" result="coloredShadow"/>
-                                <feMerge>
-                                    <feMergeNode in="coloredShadow"/>
-                                    <feMergeNode in="SourceGraphic"/>
-                                </feMerge>
-                            </filter>
-                        </defs>
-                        <!-- The arrow itself -->
-                        <polygon points="0,0 0,100 200,50" fill="#003459" class="arrow"/> 
+                <button class="convertBTN">
+                    <svg viewBox="0 0 200 150">
+                        <polygon points="0,0 150,50 0,100" fill="#003459"/>
+                        <text x="60" y="55" text-anchor="middle" id="btnText" style="fill:white">Convert:</text>
                     </svg>
                 </button>
 
@@ -72,7 +56,6 @@
        </main>
 
 
-    <!-- <script async src="index.js"></script> -->
     <script src="node_modules/image-conversion/build/conversion.js"></script>
     <!-- <script type="module" src="index.js"></script> -->
      <script src="index.js"></script>
