Added getFiletype feature
Replaced the "PNG" text in the header with a drop-down menu, in the html.

JS will lsiten for changes to this menu, and set the targetType to the update, selected option

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     <body>
 
         <main>
-            <h1> Convert to PNG:</h1>
+            <!-- <h1> Convert to PNG</h1> -->
+            <h1> Convert to
+                <select name="fileType" id="fType-select">
+                    <option value="PNG">PNG</option><option value="JPG">JPG</option>
+                </select>
+            </h1> 
 
             <div class="container">
 
