--- a/index.html
+++ b/index.html
@@ -45,21 +45,14 @@
                 </div>
 
                 <button class="convertBTN">
-                    <!-- <svg viewBox="0 0 200 150">
-                        <polygon points="0,0 150,50 0,100" fill="#003459"/>
-                        <text x="60" y="55" text-anchor="middle" id="btnText" style="fill:white">Convert:</text>
-                    </svg> -->
                     <svg viewBox="0 0 400 350">
                         <polygon points="0,0 400,150 0,300" fill="#003459"/>
                         <text x="160" y="160" text-anchor="middle" id="btnText" style="fill:white">Convert:</text>
                     </svg>
                 </button>
 
-                <!-- <div id="namePreview" style="position: fixed; z-index: -2;">
-                    <p>Filename: </p>
-                </div> -->
 
-                <div class="imgPreview">
+                <div class="imgPreview" id="imgPreview">
                     <canvas id="previewCanv">
 
                     </canvas>
