--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <meta name="description" content="An image converter.">
+        <meta name="description" content="A simple and quick image converter. Select your desired file type and convert.">
         <meta name="keywords" content="To Png, PNG converter">
         <meta name="author" content="Azaam Holdman">
 
         <link rel="stylesheet" type="text/css" href="styles.css">
         
-        <title>To PNG</title>
+        <title>ImageShift</title>  <!-- OLD TITLE: To PNG-->
 
         <!-- "looking" at this website for inspiration: https://www.adobe.com/express/feature/image/convert/jpg-to-png -->
         <!-- this library: https://www.npmjs.com/package/image-conversion -->
@@ -27,7 +27,7 @@
             <!-- <h1> Convert to PNG</h1> -->
             <h1> Convert to
                 <select name="fileType" id="fType-select">
-                    <option value="PNG">PNG</option><option value="JPG">JPG</option>
+                    <option value="png">PNG</option> <option value="jpg">JPG</option> <option value="gif">GIF</option>
                 </select>
             </h1> 
 
